[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "sleepecg"
description = "A package for sleep stage classification using ECG data"
license = {text = "BSD 3-Clause"}
authors = [
    {name = "Florian Hofer", email = "hofaflo@gmail.com"},
    {name = "Clemens Brunner", email = "clemens.brunner@gmail.com"},
]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
keywords = ["sleep", "ecg", "qrs", "peak"]
dependencies = [
    "numpy >= 1.26.0",
    "pyyaml >= 6.0.0",
    "requests >= 2.32.3",
    "scipy >= 1.13.0",
    "tqdm >= 4.66.0",
]
dynamic = ["version"]

[project.optional-dependencies]
full = [  # complete package functionality
    "edfio >= 0.4.4",
    "joblib >= 1.4.2",
    "matplotlib >= 3.9.2",
    "numba >= 0.61.0",
    "tensorflow >= 2.17.0; python_version < '3.13'",
    "wfdb >= 4.2.0",
]

dev = [  # everything needed for development
    "sleepecg[doc]",
    "sleepecg[full]",
    "mypy >= 0.991",
    "pre-commit >= 2.13.0",
    "pytest >= 6.2.0",
    "pytest-cov >= 6.0.0",
    "ruff >= 0.4.0",
    "setuptools >= 72.1.0",
]

doc = [  # RTD uses this when building the documentation
    "mkdocs-material >= 9.5.0",
    "mkdocstrings-python >= 1.11.1",
]

cibw = [  # cibuildwheel uses this for running the test suite
    "edfio >= 0.4.4",
    # numba 0.61.0 is available on aarch64, but is not compatible with the image
    # we use to build it. So skip numba tests on aarch64 during cibuildwheel there,
    # and rely on CIs with Ubuntu to test it with numba.
    "numba >= 0.61.0; platform_machine != 'aarch64'",
    "wfdb >= 4.2.0",
]

[project.urls]
homepage = "https://github.com/cbrnr/sleepecg"
documentation = "https://sleepecg.readthedocs.io/en/latest/"
repository = "https://github.com/cbrnr/sleepecg"
changelog = "https://github.com/cbrnr/sleepecg/blob/main/CHANGELOG.md"

[tool.cibuildwheel]
test-requires = "pytest"
test-extras = "cibw"
test-command = "pytest {package}"
skip = 'pp* *musllinux*'
build = "cp310-*"  # abi3
archs = "native"

[[tool.cibuildwheel.overrides]]
select = "*"
inherit.repair-wheel-command = "append"
repair-wheel-command = [
  "pipx run abi3audit --strict --report {wheel}",
]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.windows]
archs = "AMD64"
before-build = "pip install delvewheel"
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel}",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unreachable = true
strict_equality = true
pretty = true

[tool.pytest.ini_options]
markers = ["c_extension"]
filterwarnings = [
    "error",
    'ignore:.*datetime.datetime.utcfromtimestamp\(\):DeprecationWarning',
    'ignore:(?s).*Pyarrow:DeprecationWarning',
]

[tool.ruff]
line-length = 92
exclude = ["setup.py"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "W", "UP"]
ignore = ["D105"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/examples/*.py" = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.dynamic]
version = {attr = "sleepecg.__version__"}
