[metadata]
name = sleepecg
version = attr: sleepecg.__version__
url = https://github.com/cbrnr/sleepecg
author = Florian Hofer
author_email = hofaflo@gmail.com
maintainer = Clemens Brunner
maintainer_email = clemens.brunner@gmail.com
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
license = BSD 3-Clause License
description = A package for sleep stage classification using ECG data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sleep, ecg, qrs, peak


[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.20.0
    requests>=2.25.0
    scipy>=1.6.0
    tqdm>=4.59.0
    PyYAML>=5.4.0


[options.extras_require]
# complete package functionality
full =
    joblib>=1.0.0
    matplotlib>=3.4.0
    mne>=0.23.0
    numba>=0.53.0
    pandas>=1.2.0
    tensorflow>=2.7.0
    wfdb>=3.3.0

# everything needed for development
dev =
    furo>=2022.1.2
    joblib>=1.0.0
    matplotlib>=3.4.0
    mne>=0.23.0
    myst-parser>=0.15.0
    numba>=0.53.0
    numpydoc>=1.1.0
    pandas>=1.2.0
    pre-commit>=2.13.0
    pyEDFlib>=0.1.25
    pytest>=6.2.0
    setuptools>=56.0.0
    sphinx>=4.1.0
    tensorflow>=2.7.0
    wfdb>=3.3.0

# Read the Docs uses this when building the documentation
doc =
    furo
    myst-parser
    numpydoc
    sphinx

# cibuildwheel uses this for running the test suite
# pytest is installed automatically (see pyproject.toml[tool.cibuildwheel])
cibw =
    mne>=0.23.0
    numba>=0.53.0
    pyEDFlib>=0.1.25
    wfdb>=3.3.0


[options.package_data]
* = *.pyi


[options.packages.find]
exclude =
    examples


[flake8]
max-line-length = 92
max-doc-length = 75
exclude =
    ./build/*
per-file-ignores = __init__.py:F401


[isort]
line_length = 92
multi_line_output = 3
include_trailing_comma = true


[pydocstyle]
convention = numpy
add_ignore = D105  # Missing docstring in magic method


[tool:pytest]
markers =
    c_extension: mark a test as belonging to a C extension
